--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -8,7 +8,7 @@ editor_options:
   chunk_output_type: console
 ---
 
-Welcome to my research website.
+Welcome to C. elegans' group research website.
 
 * [P-hacking analysis](P-hacking_COVID-19_c.elegans.html)
 
